Fix alignment of a ring-table__header-checkbox
Former-commit-id: 1d324e88657ac94f6705e8ea9a9344d5c39b1a83

--- a/components/table/table.scss
+++ b/components/table/table.scss
@@ -17,7 +17,7 @@
 .ring-table__header-checkbox {
   display: inline-block;
   position: relative;
-  top: 3px;
+  top: 1px;
 }
 
 .ring-table__title {
